--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,26 @@
 {% extends 'basis.html' %}
 {% block title %}ToDo{% endblock %}
 {% block content %}
-{#        <form method = "POST" action="{% url 'index' %}">#}
-{#            <font color="red" size="3">{{ message }}</font>#}
-{#            {{ url_form.as_p }}#}
-{#            <p><input type="submit" value="Short it!"></p>#}
-{#        </form>#}
         <table border="1">
-            <tr>
+            <tr align="center">
                 <td>Status</td>
                 <td>Task</td>
-                <td>Actions</td>
+                <td colspan="4" align="center">Actions</td>
             </tr>
             {% for task in tasks %}
-            <tr>
-                <td>{{ task.status }}</td>
-                <td>{{ task.task }}</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+                <tr>
+                    {% if task.status == 1 %}
+                        <td align="center"><input type="checkbox" checked disabled></td>
+                        <td><del>{{ task.task }}</del></td>
+                    {% else %}
+                        <td align="center"><input type="checkbox" disabled></td>
+                        <td>{{ task.task }}</td>
+                    {% endif %}
+                    <td><a href="{% url 'updown' %}/?order={{ task.order }}&type=up">Move up</a></td>
+                    <td><a href="{% url 'updown' %}/?order={{ task.order }}&type=down">Move down</a></td>
+                    <td><a href="{% url 'edit' %}/?id={{ task.id }}">Edit</a></td>
+                    <td><a href="{% url 'delete' %}/?order={{ task.order }}">Delete</a></td>
+                </tr>
             {% endfor %}
         </table>
     <a href="{% url 'add_task' %}">Add task</a>
